--- a/Markdown/寒假集训/寒假集训.md
+++ b/Markdown/寒假集训/寒假集训.md
@@ -2135,7 +2135,6 @@ void dfs(int u, int fa) {
             dp[u] = max(dp[u], dp[v] + w);
         }
 }
-
 ```
 
 ## 树的重心
@@ -2158,7 +2157,6 @@ void dfs(int u, int fa) {
     maxx[u] = max(maxx[u], n - sz[u]);
     if (maxx[u] < ans) ans = maxx[u], ansu = u;
 }
-
 ```
 
 ## 树的中心
@@ -2253,12 +2251,329 @@ void dfs(int u, int fa) {
 
 这个方法是 $O(n*m)$
 
-
-
-
-
 # dfs序 树上差分
+
+## 树上倍增
+
+### 例题
+
+给定一棵 $n$ 个点的树，每条边上有边权。 $q$ 次询问，每次给出两个点 $u$  $v$ ，求 $u$ 到 $v$ 的树上简单路径所经过的所有边的最小值。
+其中  $n , q <= 2 *10^5$
+
+```cpp
+void dfs(int u, int f) {
+    dep[u] = dep[f] + 1;
+    for (auto &[v, x] : g[u]) {
+        if (v == f) continue;
+        // 处理往上一个点的情况
+        par[v][0] = u;
+        val[v][0] = x;
+        dfs(v, u);
+    }
+}
+// 在求解lca的过程中额外维护我们要的信息
+int query(int u, int v) {
+    int ans = 1 << 30;
+    if (dep[u] > dep[v]) swap(u, v);
+    int d = dep[v] - dep[u];
+    for (int j = 30; j >= 0; j--)
+        if (d & (1 << j)) {
+            ans = min(ans, val[v][j]);
+            v = par[v][j];
+        }
+    if (u == v) return ans;
+    for (int j = 30; j >= 0; j--)
+        if (par[u][j] != par[v][j]) {
+            ans = min({ans, val[u][j], val[v][j]});
+            u = par[u][j];
+            v = par[v][j];
+        }
+    ans = min({ans, val[u][0], val[v][0]});
+    return ans;
+}
+int main() {
+    cin >> n >> q;
+    for (int i = 1, u, v, w; i < n; i++) {
+        // u 到 v 的权值为 w 的边
+        cin >> u >> v >> w;
+        g[u].push_back({v, w});
+        g[v].push_back({u, w});
+    }
+    dfs(1, 0);
+    for (int j = 1; j <= 30; j++) {
+        for (int u = 1; u <= n; u++) {
+            par[u][j] = par[par[u][j - 1]][j - 1];
+            val[u][j] = min(val[u][j - 1], val[par[u][j - 1]][j - 1]);
+        }
+    }
+    for (int i = 1; i <= q; i++) {
+        int u, v;
+        cin >> u >> v;
+        cout << query(u, v) << endl;
+    }
+}
+```
+
+只要信息可以在倍增过程中 **快速合并**。并且问题中 **不带修改**，我们都可以使用倍增来快速询问一些关于 **树上路径** 的信息。
+
+## 树上差分
+
+### 点差分
+
+给定一棵 $n$ 个点的树，每个点初始点权都是 $0$ 。你要执行 $q$ 次操作，每次操作形如：
+$u$  $v$  $x$ 表示对 $u$ 到 $v$ 路径上的所有点点权都增加 $x$ 。
+在 $q$ 次操作之后，你需要输出所有点的点权。
+是否有一点点熟悉的味道？它是不是很像这样一个题目：
+给定一个长度为 $n$ 的数组  $a$。你要执行 $q$ 次操作，每次操作形如：
+$l$   $r$  $x$表示对区间 $[l,r]$ 的每个数增加 $x$ 。
+
+在 $q$ 次操作之后，你需要输出数组中每个数的值。
+对于这个序列的版本，我们已经知道可以使用差分，把区间修改的操作转化到原数组的差分数组上，然后通过前缀和就可以复原数组，获得每一个数的值了，时间复杂度 $O(q+n)$ 。
+那同样的，原题只不过是把这个背景从序列上搬到了树上。我们显然也可以使用类似的思想来解决这个问题。
+假设我们对下图中的 $s$ 到 $t$ 结点路径上的点的点权都增加 $1$ 。
+
+其他点的 $cnt$ 都是 $0$ 。我们考虑如何复原，考虑在序列上的前缀和在树上的表现形式是什么，发现就是 ****子树和**** 。所以每个点的点权只要求出它为根的子树的差分数组的点权和即可。这个过程可以在 $dfs$ 的时候回溯完成，类似一个极其简单的树形 $dp$  。
+这个差分的过程其实也是十分自然的，我们肯定要对 $u$ 和 $v$ 的差分数组上 $+1$ ，所以考虑转折点 $lca(u,v)$，它把两个点都包括在了自己的子树内，但是它只被经过了一次，所以要在 $lca(u,v)$ 的差分数组上 $-1$ ，但是这还没有结束，因为现在你发现 $lca(u,v)$ 的所有祖先因为都包含了 $lca(u,v)$ ，所以在计算时都是 $1$ ，但显然他们的值是 $0$ ，所以我们还要在 $lca(u,v)$ 的最近的祖先处的差分数组上 $-1$ 。显然这个点就是它的父亲。
+这样，点差分就结束了。
+
+```cpp
+#include <iostream>
+#include <iomanip>
+#include <vector>
+#include <algorithm>
+using namespace std;
+typedef long long ll;
+const int N = 5e5 + 7;
+int n, m, rt;
+int par[N][20], dep[N], cnt[N], val[N];
+vector<int> G[N];
+void dfs(int u, int fa) {
+    dep[u] = dep[fa] + 1;
+    par[u][0] = fa;
+    for (int i = 1; i < 20; ++i) {
+        par[u][i] = par[par[u][i - 1]][i - 1];
+    }
+    for (auto &v : G[u]) {
+        if (v == fa) continue;
+        dfs(v, u);
+    }
+}
+int LCA(int u, int v) {
+    if (dep[u] < dep[v]) swap(u, v);
+    for (int i = 19; i >= 0; --i) {
+        if (dep[par[u][i]] >= dep[v]) u = par[u][i];
+    }
+    if (u == v) return u;
+    for (int i = 19; i >= 0; --i) {
+        if (par[u][i] != par[v][i]) {
+            u = par[u][i], v = par[v][i];
+        }
+    }
+    return par[u][0];
+}
+void dfs1(int u, int fa) {
+    val[u] = cnt[u];
+    for (auto &v : G[u]) {
+        if (v == fa) continue;
+        dfs1(v, u);
+        val[u] += val[v];
+    }
+}
+int main() {
+    freopen("maxflow.in", "r", stdin);
+    freopen("maxflow.out", "w", stdout);
+    cin >> n >> m;
+    for (int i = 1, u, v; i < n; i++) {
+        cin >> u >> v;
+        G[u].push_back(v);
+        G[v].push_back(u);
+    }
+    dfs(1, 0);
+    while (m--) {
+        int x, y;
+        cin >> x >> y;
+        cnt[x]++;
+        cnt[y]++;
+        cnt[LCA(x, y)]--;
+        cnt[par[LCA(x, y)][0]]--;
+    }
+    dfs1(1, 0);
+    int ans = 0;
+    for (int i = 1; i <= n; i++) {
+        ans = max(ans, val[i]);
+    }
+    cout << ans << endl;
+}
+```
+
+### 边差分
+
+给定一棵 $n$ 个点的树，每条边的边权都是 $0$ 。你要执行 $q$ 次操作，每次操作形如：
+ $u$  $v$  $x:$表示对 $u$ 到 $v$ 路径上的所有边边权都增加 $x$ 。
+在 $q$ 次操作之后，你需要输出所有边的边权。
+假设我们对下图中的 $s$ 到 $t$ 结点路径上的边的边权都增加 $1$ ：
+
+这次的不同在于所有的操作都是对于边而言的。那么我们是否可以把边转化为点呢？
+我们钦定这样一种对边标记的方法，设有一条边的两个点端点为 $u$  $v$。并且满足 $dep[u] > dep[v]$  $dep[i]$，代表 $i$ 点的深度。我们就把这条边认为是 $u$ 的。这样一来由于树的每个节点有且仅有一个父亲，所以每个点只会被分到一条边。其中根节点没有分到任何一条边。这样一来， 上面的图就变成了这样:
+
+接下来问题就回归了点差分。并且这个东西更简单了，因为它相当于对 $s$ 到 $t$ 的路径上除了 $lca(u,v)$的点点权加 $1$ 。
+显然我们只需要对 $cnt[s] +1,cnt[t]+1,cnt[lca(s,t)]-2$ 即可。
+这样，边差分也就结束了。
+
+```cpp
+#include <iostream>
+#include <iomanip>
+#include <vector>
+#include <algorithm>
+using namespace std;
+typedef long long ll;
+const int N = 5e5 + 7;
+int n, m, rt;
+int par[N][20], dep[N], cnt[N], val[N], qaq[N], ans[N];
+vector<int> g[N];
+pair<int, int> G[N];
+void dfs(int u, int fa) {
+    dep[u] = dep[fa] + 1;
+    par[u][0] = fa;
+    for (int i = 1; i < 20; ++i) {
+        par[u][i] = par[par[u][i - 1]][i - 1];
+    }
+    for (auto &v : g[u]) {
+        if (v == fa) continue;
+        dfs(v, u);
+    }
+}
+int LCA(int u, int v) {
+    if (dep[u] < dep[v]) swap(u, v);
+    for (int i = 19; i >= 0; --i) {
+        if (dep[par[u][i]] >= dep[v]) u = par[u][i];
+    }
+    if (u == v) return u;
+    for (int i = 19; i >= 0; --i) {
+        if (par[u][i] != par[v][i]) {
+            u = par[u][i], v = par[v][i];
+        }
+    }
+    return par[u][0];
+}
+void dfs1(int u, int fa) {
+    val[u] = cnt[u];
+    for (auto &v : g[u]) {
+        if (v == fa) continue;
+        dfs1(v, u);
+        val[u] += val[v];
+    }
+    ans[qaq[u]] = val[u];
+}
+int main() {
+    ios::sync_with_stdio(false);
+    cin.tie(0);
+    cout.tie(0);
+    cin >> n;
+    for (int i = 1, u, v; i < n; i++) {
+        cin >> u >> v;
+        g[u].push_back(v);
+        g[v].push_back(u);
+        G[i] = {u, v};
+    }
+    dfs(1, 0);
+    for (int i = 1; i < n; i++) {
+        int u = G[i].first;
+        int v = G[i].second;
+        if (dep[u] < dep[v]) swap(u, v);
+        qaq[u] = i;
+    }
+    cin >> m;
+    while (m--) {
+        int x, y;
+        cin >> x >> y;
+        cnt[x]++;
+        cnt[y]++;
+        cnt[LCA(x, y)] -= 2;
+    }
+    dfs1(1, 0);
+    for (int i = 1; i < n; i++) {
+        cout << ans[i] << " ";
+    }
+}
+```
+
+### 总结
+
+在序列上的区间修改，在树上的表现形式就是路径修改。
+在序列上的前缀和，在树上的表现形式就是子树和。
+对 $u$ 和 $v$ 路径上做 **点差分** 等价于 $cnt[u]+1,cnt[v]+1,cnt[lca(u,v)]-1,cnt[fa(lca(u,v))]-1$
+
+对 $u$ 和 $v$ 路径上做 **边差分** 等价于 $cnt[u]+1,cnt[v]+1,cnt[lca(u,v)]-2$ 。
+
+## dfs序
+
+给定一棵 $n$ 个点的树，每个点初始点权都是 $0$ 。你要支持两种操作：
+$1$  $u$  $v$  $x:$表示对 $u$ 到 $v$ 路径上的所有点点权都增加 $x$ 。
+$2$  $u:$表示输出点 $u$ 的点权。
+坏了，这下修改和查询会穿插进行了。我们还是先来考虑原来序列上的版本：
+给定一个长度为 $n$ 的数组 $a$ 。你要支持两种操作：
+$1$  $l$  $r$  $x:$表示对区间 $[l,r]$ 的每个数增加 $x$ 。
+$2$  $d:$表示输出下标为 $d$ 的数。
+显然，这个序列上的版本是普通的差分前缀和是无法完成的。我们需要使用 **树状数组或线段树** 维护差分或 **线段树打** 来完成。我们考虑前者，其实前者的本质还是差分和前缀和，差分还是可以直接做，只不过这个前缀和是动态的，所以我们无法直接获得，要使用 **树状数组** 维护。
+
+```cpp
+int L[N], R[N], tot;
+// L[i] 即为 i 点为根的子树的最小点的编号
+// R[i] 即为 i 点为根的子树的最大点的编号
+void dfs(int x, int fa) {
+    L[x] = ++tot;
+    for (auto u : g[x]) {
+        if (u == fa) continue;
+        dfs(u, x);
+    }
+    R[x] = tot;
+}
+```
+
+
 
 
 
 # 单调栈 单调队列
+
+## 单调栈
+
+例题引入
+给定一个 $n$ 个数的数组 $a$ ，定义 $f(i)$ 是 $a[i]$ 左边第一个小于 $a[i]$ 的元素的下标，若不存在，则 $f(i)=0$ ，试求出所有数的 $f(i)$
+
+假如有两个数 $a[i]$ 和 $a[j]$ ，$a[i] <a[j]$ 并且 $i>j$ ，意思就是 $a[i]$ 在 $a[j]$ 的右边并且还比 $a[j]$ 小。那么 $a[j]$ 对于后面的数来说，必然不会作为答案，相当于 $a[j]$ 这个值没有用了，那么我们就可以想象栈。对于每个数进来，因为维护的相当于是前面的数的一个集合，所以我们可以把前面的比他大的数都弹出去。那么停止的时候， 就是遇到了第一个小于 $a[i]$ 的数，其实用单调栈的思想可以看作只是暴力的优化或者说减枝，因为栈里维护的也是前面的集合，或者说是可行的答案的集合，因为每加进来一个数，都会弹出前面不可能作为答案的数。显然每个数最多只能被加进来一次，弹出去一次，那么时间复杂度显然是 $O(n)$ 的。那么就比前面的方法优秀很多。
+
+```cpp
+void solve() {
+    int n;
+    cin >> n;
+    stack<int> st; // 栈里面存放的是下标
+    vector<int> a(n + 1), f(n + 1);
+    for (int i = 1; i <= n; ++i) {
+        cin >> a[i];
+        while (!st.empty() && a[st.top()] >= a[i]) {
+            // 不同题目的符号不同，注意分辨
+            st.pop();
+        }
+        f[i] = (st.size() == 0 ? 0 : st.top()); // f[i] = (st.size() == 0 ? n + 1 : st(top());
+        st.push(i);                             // 注意栈里面放进去的是下标
+    }
+    for (int i = 1; i <= n; ++i) {
+        cout << f[i] << " \n"[i == n];
+    }
+}
+```
+
+## 单调队列
+
+**单调队列** 是一种主要用于解决**滑动窗口**类问题的数据结构在长度为 $n$ 的序列中，求每个长度为 $m$ 的区间的区间最值。它的时间复杂度是 $n$ ，在这个问题中比线段树或者 $st$ 表优秀。
+
+1. 思考一下如何用普通队列做，那么只要用一个队列来维护当前窗口里的所有值，然后线性扫描一下队列，每次新加进来一个数，就把队尾加一个数，队头弹一个数出去，很显然时间复杂度是 $O(nk)$
+2. 类似于单调栈的想法，观察一下哪些数永远不可能作为答案了，也就是说没有用了。
+
+所以假如要求区间最小值，有一个数如果更靠后并且更小，那么前面的数字就没有用了。所以新加进来一个数，可以把靠右的比他大的数弹出去，然后因为区间往右边挪了，维护的数的左端点也要合法，所以弹出左侧不合法的下标，因为停止的条件是碰到了一个比他小的数，所以容易想到队列里面的元素排列是递增的，所以叫单调队列，因为维护的都是可能的答案加上单调递增。所以处理完之后，最小值就是队头的元素，就可以 $O(1)$ 得到。因为需要左侧，右侧，可以联想到 $depue$ 这个数据结构
+
+```cpp
+
+```
